
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct super_block {int dummy; } ;
struct ext4_sb_info {scalar_t__ s_cluster_ratio; } ;
struct ext4_map_blocks {scalar_t__ m_lblk; void* m_len; scalar_t__ m_pblk; } ;
struct ext4_extent {int ee_block; } ;
struct ext4_ext_path {int dummy; } ;
typedef scalar_t__ ext4_lblk_t ;
typedef unsigned short ext4_fsblk_t ;


 scalar_t__ EXT4_B2C (struct ext4_sb_info*,scalar_t__) ;
 scalar_t__ EXT4_LBLK_COFF (struct ext4_sb_info*,scalar_t__) ;
 scalar_t__ EXT4_PBLK_CMASK (struct ext4_sb_info*,unsigned short) ;
 struct ext4_sb_info* EXT4_SB (struct super_block*) ;
 unsigned short ext4_ext_get_actual_len (struct ext4_extent*) ;
 scalar_t__ ext4_ext_next_allocated_block (struct ext4_ext_path*) ;
 unsigned short ext4_ext_pblock (struct ext4_extent*) ;
 scalar_t__ le32_to_cpu (int ) ;
 void* min (void*,scalar_t__) ;
 int trace_ext4_get_implied_cluster_alloc_exit (struct super_block*,struct ext4_map_blocks*,int) ;

__attribute__((used)) static int get_implied_cluster_alloc(struct super_block *sb,
         struct ext4_map_blocks *map,
         struct ext4_extent *ex,
         struct ext4_ext_path *path)
{
 struct ext4_sb_info *sbi = EXT4_SB(sb);
 ext4_lblk_t c_offset = EXT4_LBLK_COFF(sbi, map->m_lblk);
 ext4_lblk_t ex_cluster_start, ex_cluster_end;
 ext4_lblk_t rr_cluster_start;
 ext4_lblk_t ee_block = le32_to_cpu(ex->ee_block);
 ext4_fsblk_t ee_start = ext4_ext_pblock(ex);
 unsigned short ee_len = ext4_ext_get_actual_len(ex);


 ex_cluster_start = EXT4_B2C(sbi, ee_block);
 ex_cluster_end = EXT4_B2C(sbi, ee_block + ee_len - 1);


 rr_cluster_start = EXT4_B2C(sbi, map->m_lblk);

 if ((rr_cluster_start == ex_cluster_end) ||
     (rr_cluster_start == ex_cluster_start)) {
  if (rr_cluster_start == ex_cluster_end)
   ee_start += ee_len - 1;
  map->m_pblk = EXT4_PBLK_CMASK(sbi, ee_start) + c_offset;
  map->m_len = min(map->m_len,
     (unsigned) sbi->s_cluster_ratio - c_offset);
  if (map->m_lblk < ee_block)
   map->m_len = min(map->m_len, ee_block - map->m_lblk);
  if (map->m_lblk > ee_block) {
   ext4_lblk_t next = ext4_ext_next_allocated_block(path);
   map->m_len = min(map->m_len, next - map->m_lblk);
  }

  trace_ext4_get_implied_cluster_alloc_exit(sb, map, 1);
  return 1;
 }

 trace_ext4_get_implied_cluster_alloc_exit(sb, map, 0);
 return 0;
}
